--- a/PhotoTool.csproj
+++ b/PhotoTool.csproj
@@ -5,4 +5,10 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Serilog" Version="2.9.1-dev-01165" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="4.0.0-dev-00839" />
+    <PackageReference Include="XmpCore" Version="6.1.10" />
+  </ItemGroup>
+
 </Project>
