--- a/PhotoTool.csproj
+++ b/PhotoTool.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="Serilog" Version="2.9.1-dev-01165" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="4.0.0-dev-00839" />
     <PackageReference Include="XmpCore" Version="6.1.10" />
     <PackageReference Include="CsvHelper" Version="15.0.5" />
   </ItemGroup>
